<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignupActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/college_club3"
            android:padding="10dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/full_name_signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.Login">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/full_name_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:backgroundTint="@android:color/white"
                android:hint="@string/full_name_str"
                android:textCursorDrawable="@null"
                android:inputType="textLongMessage"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_id_signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.Login">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_id_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:backgroundTint="@android:color/white"
                android:hint="@string/username_string"
                android:textCursorDrawable="@null"
                android:inputType="textEmailAddress|textLongMessage"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/roll_number_signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.Login">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/roll_number_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:backgroundTint="@android:color/white"
                android:hint="@string/roll_number_str"
                android:textCursorDrawable="@null"
                android:inputType="textLongMessage"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.Login">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:backgroundTint="@android:color/white"
                android:hint="@string/password_string"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_repeat_signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.Login">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_repeat_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:backgroundTint="@android:color/white"
                android:hint="@string/repeat_pass_str"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/but_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_str"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:onClick="signUp"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
